generator/javascript/src/transform/snapshots/knot_generator_javascript__transform__statement__tests__statement__last_expression.snap
---
source: generator/javascript/src/transform/statement.rs
expression: ast
---
[
    Return(
        Some(
            Null,
        ),
    ),
]
