generator/javascript/src/transform/snapshots/knot_generator_javascript__transform__statement__tests__statement__variable.snap
---
source: generator/javascript/src/transform/statement.rs
expression: ast
---
[
    Variable(
        "foo",
        Null,
    ),
]
